--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html{
 body{
     z-index: 0;
     padding: 5%;
-    padding-top: 4em;
+    padding-top:0;
     padding-bottom: 0;
 }
 
@@ -42,6 +42,9 @@ body #back-to-top{
 
 
 /* Doc-like */
+#top {
+    padding-top:4em;
+}
 
 #main-content #content-window{
     width: 100%;
